# ylab-fastapi-w1

./: .gitignore  .pdm.toml  LICENSE  README.md  menu_app.postman_environment.json  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/routers/: dishes.py  menus.py  submenus.py
app/core/: config.py
app/crud/: base.py  crud_menu.py
app/db/: session.py
app/models/: __all_models.py  dish.py  menu.py  submenu.py
app/schemas/: __init__.py  dish.py  menu.py  submenu.py
app/templates/home/: index.html
app/templates/shared/: layout.html
app/tests/crud/: dish.py  menu.py  submenu.py
app/views/: home.py
scripts/: curl_POST.sh
