[tool.pdm]

[project]
name = "app"
version = "0.1.0"
description = "YLab W1 Assignment"
authors = [
    {name = "Anton Simonov", email = "asimonov215@gmail.com"},
]
dependencies = [
    "fastapi>=0.89.1",
    "uvicorn>=0.20.0",
    "sqlalchemy>=1.4.46",
]
requires-python = ">=3.10"
license = {text = "MIT"}
