[tool.pdm]

[project]
name = "app"
version = "0.1.0"
description = "YLab W1 Assignment"
authors = [
    {name = "Anton Simonov", email = "asimonov215@gmail.com"},
]
dependencies = [
    "fastapi>=0.89.1",
    "uvicorn>=0.20.0",
    "sqlalchemy>=1.4.46",
    "psycopg2>=2.9.5",
    "fastapi-utils>=0.2.1",
    "sqlalchemy-utils>=0.39.0",
    "asyncpg>=0.27.0",
    "aiopg>=1.4.0",
    "gino>=1.0.0",
    "jinja2>=3.1.2",
    "aiofiles>=22.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
